--- a/index.html
+++ b/index.html
@@ -28,12 +28,27 @@
 	    <meta name="theme-color" content="#555555" />
 	</head>
 	<body>
+		<header>
+			<a href='/' class='home'>GS Productions</a>
+		</header>
 	<div id="wrapper">
 		<h1>Hi, I'm <span class="emph">Grey</span></h1>
 		<h2 id="subtitle">I make stuff. A <span class="emph">lot</span> of stuff.</h2>
 
 		<div id="projects">
-			<h3>This site is under construction. Come back later!</h3>
+			<h3>Discord Bots</h3>
+			<div class="proj-wrapper">
+				<div class="proj">
+					<div class="in">
+						<p class="proj-title">Sheep</p>
+						<p class="proj-sub">A simple color changer</p>
+						<p>Sheep is a bot created for changing Discord name colors, made with simplicity and ease of use in mind.</p>
+					</div>
+				</div>
+			</div>
+			<h3>Sites</h3>
+			<div class="proj-wrapper">
+			</div>
 		</div>
 	</div>
 	</body>
