Add projects info

--- a/index.html
+++ b/index.html
@@ -26,27 +26,96 @@
 	    <meta property="og:site_name" content="Grey Skies Productions">
 
 	    <meta name="theme-color" content="#555555" />
+
+	    <script src="https://kit.fontawesome.com/a60f14aba5.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
 			<a href='/' class='home'>GS Productions</a>
 		</header>
 	<div id="wrapper">
-		<h1>Hi, I'm <span class="emph">Grey</span></h1>
+		<h1 id="title">Hi, I'm <span class="emph">Grey</span></h1>
 		<h2 id="subtitle">I make stuff. A <span class="emph">lot</span> of stuff.</h2>
+		<p class="cv">
+			I'm a freelance software dev running 6 public bots, 
+			along with several smaller commissioned ones. I've also 
+			created several sites, including this one. On top of those, 
+			I've built a handful of smaller applications that 
+			are utility-based or integrate with other bots. 
+			I'm also on the dev/mod team for two other large bots, 
+			with one being in over 1 million servers.
+		</p>
+		<p class="cv">
+			When I'm not building something new, I spend a lot of 
+			my time doing upkeep, bug fixes, and user support. 
+			I tend to go back and optimize older programs often, 
+			as I'm constantly learning better and more efficient 
+			ways to do things.
+		</p>
+		<p class="cv">
+			<strong>Here are some things I've made:</strong>
+		</p>
 
 		<div id="projects">
-			<h3>Discord Bots</h3>
-			<div class="proj-wrapper">
+			<h1>Discord Bots</h1>
+			<div id="proj-wrapper">
 				<div class="proj">
 					<div class="in">
 						<p class="proj-title">Sheep</p>
-						<p class="proj-sub">A simple color changer</p>
-						<p>Sheep is a bot created for changing Discord name colors, made with simplicity and ease of use in mind.</p>
+						<p class="proj-sub">A simple color bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/sheep"><i class="fab fa-github fa-lg"></i></a>
+							<a target="_blank" href="https://sheep.greysdawn.com"><i class="fas fa-link fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj">
+					<div class="in">
+						<p class="proj-title">Form Fox</p>
+						<p class="proj-sub">A powerful form bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/form-fox"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj">
+					<div class="in">
+						<p class="proj-title">Ticket Golem</p>
+						<p class="proj-sub">A support ticket bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/ticket-golem"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj">
+					<div class="in">
+						<p class="proj-title">Enderbot</p>
+						<p class="proj-sub">A fun starboard bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/enderbot"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj">
+					<div class="in">
+						<p class="proj-title">Ocelot</p>
+						<p class="proj-sub">A role management bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/ocelot"><i class="fab fa-github fa-lg"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<h3>Sites</h3>
+			
+			<h1>Sites</h1>
+			<div class="proj-wrapper">
+			</div>
+
+			<h1>Other</h1>
 			<div class="proj-wrapper">
 			</div>
 		</div>
