--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 		<div id="projects">
 			<h1>Discord Bots</h1>
-			<div id="proj-wrapper">
-				<div class="proj">
+			<div class="proj-wrapper">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928148309841936394/export1641358179278.png);">
 					<div class="in">
 						<p class="proj-title">Sheep</p>
 						<p class="proj-sub">A simple color bot</p>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 
-				<div class="proj">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928148309628059658/export1641358175443.png);">
 					<div class="in">
 						<p class="proj-title">Form Fox</p>
 						<p class="proj-sub">A powerful form bot</p>
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 
-				<div class="proj">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928154982925099028/export1641359781189.png);">
 					<div class="in">
 						<p class="proj-title">Ticket Golem</p>
 						<p class="proj-sub">A support ticket bot</p>
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 
-				<div class="proj">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928155975192551474/export1641360010501.png);">
 					<div class="in">
 						<p class="proj-title">Enderbot</p>
 						<p class="proj-sub">A fun starboard bot</p>
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<div class="proj">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928157364861956206/export1641360351658.png);">
 					<div class="in">
 						<p class="proj-title">Ocelot</p>
 						<p class="proj-sub">A role management bot</p>
@@ -109,14 +109,115 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928159163190743060/export1641360770080.png);">
+					<div class="in">
+						<p class="proj-title">Alex</p>
+						<p class="proj-sub">A heavy-lifter for hub servers</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greys-bots/alex"><i class="fab fa-github fa-lg"></i></a>
+							<a target="_blank" href="https://alex.greysdawn.com"><i class="fas fa-link fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 			
 			<h1>Sites</h1>
 			<div class="proj-wrapper">
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928489361383763998/export1641436818887.png);">
+					<div class="in">
+						<p class="proj-title">Personal Site</p>
+						<p class="proj-sub">My other projects site</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/website"><i class="fab fa-github fa-lg"></i></a>
+							<a target="_blank" href="https://greysdawn.com"><i class="fas fa-link fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928489360955940884/export1641436815225.png);">
+					<div class="in">
+						<p class="proj-title">PluralKit Web</p>
+						<p class="proj-sub">Unofficial PK web UI</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/pluralkit-web"><i class="fab fa-github fa-lg"></i></a>
+							<a target="_blank" href="https://pk.greysdawn.com"><i class="fas fa-link fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928489360490397726/export1641439479932.png);">
+					<div class="in">
+						<p class="proj-title">Blossom</p>
+						<p class="proj-sub">Official site for the Blossom bot</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/blossombot/website"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928489360721076224/export1641438368145.png);">
+					<div class="in">
+						<p class="proj-title">Syscomm Web</p>
+						<p class="proj-sub">WIP system management site</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/syscomm-web"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url(https://media.discordapp.net/attachments/585890796671336451/928489361178234910/export1641436809717.png);">
+					<div class="in">
+						<p class="proj-title">MD Bin</p>
+						<p class="proj-sub">Simple, personal use markdown site</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/md-bin"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<h1>Other</h1>
 			<div class="proj-wrapper">
+				<div class="proj" style="background-image: url();">
+					<div class="in">
+						<p class="proj-title">Twitch Overlay</p>
+						<p class="proj-sub">A browser source for Twitch alerts</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/twitch-overlay"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url();">
+					<div class="in">
+						<p class="proj-title">PluralKit.js</p>
+						<p class="proj-sub">JS wrapper for the PK API</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/pk.js"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url();">
+					<div class="in">
+						<p class="proj-title">PluralKit RPC</p>
+						<p class="proj-sub">Discord rich presence client for PK</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/pk-rpc"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="proj" style="background-image: url();">
+					<div class="in">
+						<p class="proj-title">Anima Prototype</p>
+						<p class="proj-sub">Old LÖVE2D game prototype</p>
+						<div class="proj-links">
+							<a target="_blank" href="https://github.com/greysdawn/anima-ptt"><i class="fab fa-github fa-lg"></i></a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
